@@ -1,5 +1,8 @@
 2018-01-06  Carl Hetherington  <cth@carlh.net>
 
+	* Check that we can decrypt a DKDM when it is loaded into
+	the KDM creator (#1011).
+
 	* Fix crash in some cases when an incorrect KDM has been
 	added to a DCP (#1000).
 
